log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput-app
  template:
    metadata:
      labels:
        app: logoutput-app
    spec:
      volumes:
        - name: shared-logs
          emptyDir: {}
      containers:
        - name: logoutput-writer
          image: logoutput-writer:latest
          volumeMounts:
          - name: shared-logs
            mountPath: /usr/src/app/files
        - name: logoutput-reader
          image: logoutput-reader:latest
          volumeMounts:
          - name: shared-logs
            mountPath: /usr/src/app/files
