log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
spec:
  type: NodePort
  selector:
    app: logoutput-app
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 4242
