log_output/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: logoutput-route
spec:
  parentRefs:
  - name: logoutput-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: logoutput-svc
      port: 2346
